fix  button and add anchor

--- a/src/partials/pages/restaurant/hero.html
+++ b/src/partials/pages/restaurant/hero.html
@@ -27,9 +27,11 @@
           </button>
         </li>
         <li class="hero__btn item">
-          <button type="button" class="btn" data-modRoom-open>
-            Забронювати номер
-          </button>
+          <a href="#menu-restaurant">
+            <button type="button" class="btn">
+              Переглянути меню
+            </button>
+          </a>
         </li>
       </ul>
     </div>
