--- a/src/partials/pages/restaurant/menu.html
+++ b/src/partials/pages/restaurant/menu.html
@@ -1,6 +1,6 @@
 <section class="menu">
   <div class="menu__container container">
-    <h2 class="menu__title hotel-title">Меню ресторану</h2>
+    <h2 id="menu-restaurant" class="menu__title hotel-title">Меню ресторану</h2>
 
     <table class="menu__table">
       <tbody class="menu__data">
