--- a/src/partials/pages/hotel/room-for-2.html
+++ b/src/partials/pages/hotel/room-for-2.html
@@ -244,7 +244,7 @@
         <button
           type="button"
           class="btn btn--hotel-and-rest"
-          data-price-modal-open
+          data-modPrice2r-open
         >
           Переглянути ціни
         </button>
