--- a/src/sass/pages/hotel/_room-for-2.scss
+++ b/src/sass/pages/hotel/_room-for-2.scss
@@ -1,5 +1,14 @@
 .room-section {
   position: relative;
+
+  .slick-track {
+    display: flex;
+    gap: 16px;
+
+    @include tablet {
+      gap: 40px;
+    }
+  }
 }
 
 .hotel-wrap-top {
