--- a/src/sass/layout/_about-hotel.scss
+++ b/src/sass/layout/_about-hotel.scss
@@ -1,111 +1,278 @@
-.about-hotel {
+.about-our-hotel {
   position: relative;
   background-color: $colorBgLemon;
-  @include mobile {
-    padding-top: 18px;
-    padding-bottom: 72px;
-  }
+  padding-top: 16px;
+  padding-bottom: 16px;
 
   @include tablet {
     padding-top: 120px;
-    padding-bottom: 96px;
+    padding-bottom: 32px;
   }
 }
 
-.hidden-title {
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  -webkit-clip-path: inset(50%);
-  clip-path: inset(50%);
-  margin: -1px;
-}
-
-.about-hotel__title {
-  text-align: end;
+.about-hotel__slogan {
+  margin-bottom: 13px;
   font-family: 'Times New Roman';
-  font-size: 20px;
-  line-height: 23px;
+  @include font(400, 20, none, 0);
   color: $colorTextSecondary;
-  margin-bottom: 6px;
+
+  @include tablet {
+    margin-bottom: 4px;
+    font-size: 32px;
+  }
 }
 
-.about-hotel__logo {
-  text-align: end;
-  text-transform: uppercase;
-  font-family: 'Film P3';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 40px;
-  line-height: 43px;
-  letter-spacing: 0.3em;
+.hotel-logo {
   color: $colorTextAddressMobTab;
-  margin-bottom: 16px;
-}
-
-.about-hotel__text {
-  width: 243px;
-  font-family: 'Montserrat';
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 1.25;
-  letter-spacing: 0.02em;
+  margin-bottom: 12px;
   margin-left: auto;
+
+  @include tablet {
+    font-size: 64px;
+    margin-bottom: 24px;
+  }
 }
 
-.about-hotel__list .about-hotel__img {
+.hotel-desc__wrap {
+max-width: 242px;
+
+ margin-left: auto;
+ text-align: left;
+ margin-bottom: 28px;
+
+ @include tablet {
+ max-width: 419px;
+ }
+
+ @include desktop {
+  max-width: 488px;
+  }
+
+}
+
+.about-hotel__slogan, {
+  text-align: right;
+}
+
+.hotel-logo {
+  margin-right: -0.3em;
+  text-align: right;
+}
+
+.hotel-card {
+  position: relative;
+  display: flex;
+  justify-content: center;
+
+  @include desktop {
+    justify-content: space-between;
+  }
+}
+
+.hotel-card:first-child {
+  flex-wrap: wrap;
+  margin-bottom: 32px;
+
+  @include tablet {
+    margin-bottom: 338px;
+  }
+
+  @include desktop {
+    margin-bottom: 350px;
+  }
+
+  .hotel-card__description--right {
+    width: 258px;
+    margin-bottom: 28px;
+    color: $colorTextPrimary;
+
+    @include tablet {
+      width: 439px;
+      margin-bottom: 0;
+      
+    }
+
+    @include desktop {
+      width: 518px;
+    }
+  }
+
+  .hotel-card__photo--left {
+    margin-right: auto;
+    background: $colorBgImage;
+    box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
+    border-radius: 2px;
+    overflow: hidden;
+
+    @include tablet {
+      z-index: 5;
+      position: absolute;
+      left: 30px;
+      top: -375px;
+    }
+
+    @include desktop {
+      left: 95px;
+      top: -370px;
+    }
+  }
+}
+
+.hotel-card:last-child {
+  align-items: center;
+  column-gap: 20px;
+  margin-bottom: 32px;
+
+  @include tablet {
+    margin-bottom: 154px;
+  }
+
+  @include desktop {
+    margin-bottom: 124px;
+  }
+
+  .hotel-card__description {
+    padding-bottom: 20px;
+    max-width: 163px;
+    color: $colorBrown;
+
+    @include tablet {
+      max-width: 100%;
+      width: 312px;
+      padding-bottom: 0;
+      margin-right: auto;
+      margin-right: 220px;
+    }
+
+    @include desktop {
+      margin-left: 305px;
+    }
+  }
+
+  .hotel-card__photo--right {
+    background: $colorBgImage;
+    box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
+    border-radius: 2px;
+    overflow: hidden;
+
+    @include tablet {
+      position: absolute;
+      right: 0;
+      transform: translateY(-6px);
+    }
+
+    @include desktop {
+      top: -188px;
+      transform: translateY(1px);
+    }
+  }
+}
+
+.hotel-card__description {
+  @include font(600, 12, 1.25, 0.02);
+
+  @include tablet {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+.hotel-card__photo {
+  background: $colorBgImage;
   box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
   border-radius: 2px;
 }
 
-.about-hotel__img-bedroom {
+
+.hotel-slider-box {
+max-width: 428px;
+transform: translateX(-82px);
+ 
+  @include mobile {
+    padding-left: 69px;
+  }
+
   @include tablet {
-    top: -23px;
-    left: 112px;
+    transform: translateX(0);
+    padding-left: 0;
+    padding-right: 13px;
+  }
+
+  @include desktop {
+    padding-right: 0;
+    max-width: 530px;
   }
 }
 
-.about-hotel__list-item {
-  margin-bottom: 32px;
+.hotel-slider {
+  margin-left: -200px;
+  background: $colorBgImage;
+  box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 2px;
+  overflow: hidden;
 
-  & .about-hotel__text {
-    margin-bottom: 28px;
+  @include tablet {
+    width: 428px;
+    margin-right: auto;
+    margin-left: 0;
   }
 
-  &:last-child {
+  @include desktop {
+    width: 530px;
+    margin-right: auto;
+    margin-left: 0;
+  }
+
+  .slick-track {
+    column-gap: 24px;
     display: flex;
-    color: $colorBrown;
+
+    @include tablet {
+      column-gap: 40px;
+    }
+
+    @include desktop {
+      height: 245px;
+    }
   }
 }
 
-.about-hotel__box {
-  width: 163px;
-  display: flex;
-  align-items: center;
-}
-
-.about-hotel-slider {
-  display: flex;
-  position: relative;
-  padding-right: 84px;
+.hotel-slide {
+  display: block;
+  background: $colorBgImage;
+  box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 2px;
+  overflow: hidden;
 }
 
 .about-hotel__slider-arrows {
+  display: inline-flex;
+  width: 100%;
+  gap: 32px;
   margin-top: 20px;
+  justify-content: flex-start;
+  padding-right: 2px;
+
+  @include tablet {
+    margin-top: 32px;
+  }
+
+  @include desktop {
+    margin-top: 40px;
+  }
 }
 
+.about-hotel__right-arrow,
 .about-hotel__left-arrow {
+  width: 32px;
+  height: 32px;
+  background-image: url(../images/slider-arrow.svg);
+  background-size: cover;
+  outline: none;
   border: none;
-  margin-right: 33px;
-  background: url(../images/cil_arrow-left32.svg) 0 0 / 32px 32px no-repeat;
+  background-color: transparent;
 }
 
 .about-hotel__right-arrow {
-  border: none;
-  background: url(../images/cil_arrow-right32.svg) 0 0 / 32px 32px no-repeat;
+  transform: rotate(180deg);
 }
