--- a/src/partials/pages/hotel/room-for-3.html
+++ b/src/partials/pages/hotel/room-for-3.html
@@ -31,7 +31,7 @@
             ./images/hotel/hotel-1-mob.jpg    1x,
             ./images/hotel/hotel-1-mob-2x.jpg 2x
           "
-          media="(min-width: 414px)"
+          media="(min-width: 320px)"
         />
         <img
           src="./images/hotel/hotel-1-desk.jpg"
@@ -63,7 +63,7 @@
                 ./images/hotel/hotel-2-mob.jpg    1x,
                 ./images/hotel/hotel-2-mob-2x.jpg 2x
               "
-              media="(min-width: 414px)"
+              media="(max-width: 1023px)"
             />
             <img
               src="./images/hotel/hotel-2-desk.jpg"
@@ -92,7 +92,7 @@
                   ./images/hotel/hotel-3-mob.jpg    1x,
                   ./images/hotel/hotel-3-mob-2x.jpg 2x
                 "
-                media="(min-width: 414px)"
+                media="(max-width: 1023px)"
               />
               <img
                 src="./images/hotel/hotel-3-desk.jpg"
@@ -122,7 +122,7 @@
                   ./images/sliders/slider-2-tab.jpg    1x,
                   ./images/sliders/slider-2-tab-2x.jpg 2x
                 "
-                media="(min-width: 414px)"
+                media="(max-width: 1023px)"
               />
               <img
                 src="./images/sliders/slider-2-desk.jpg"
@@ -152,7 +152,7 @@
                   ./images/sliders/slider-4-tab.jpg    1x,
                   ./images/sliders/slider-4-tab-2x.jpg 2x
                 "
-                media="(min-width: 414px)"
+                media="(max-width: 1023px)"
               />
               <img
                 src="./images/sliders/slider-4-desk.jpg"
@@ -182,7 +182,7 @@
                   ./images/sliders/slider-10-tab.jpg    1x,
                   ./images/sliders/slider-10-tab-2x.jpg 2x
                 "
-                media="(min-width: 414px)"
+                media="(max-width: 1023px)"
               />
               <img
                 src="./images/sliders/slider-10-desk.jpg"
@@ -212,7 +212,7 @@
                   ./images/sliders/slider-12-tab.jpg    1x,
                   ./images/sliders/slider-12-tab-2x.jpg 2x
                 "
-                media="(min-width: 414px)"
+                media="(max-width: 1023px)"
               />
               <img
                 src="./images/sliders/slider-12-desk.jpg"
@@ -242,7 +242,7 @@
                   ./images/sliders/slider-13-tab.jpg    1x,
                   ./images/sliders/slider-13-tab-2x.jpg 2x
                 "
-                media="(min-width: 414px)"
+                media="(max-width: 1023px)"
               />
               <img
                 src="./images/sliders/slider-13-desk.jpg"
