moved shadow away from .kitchen-slide to embedded picture, added vertical paddings

--- a/src/sass/pages/restaurant/_about-kitchen.scss
+++ b/src/sass/pages/restaurant/_about-kitchen.scss
@@ -194,6 +194,9 @@
 
 .kitchen-slide {
   display: block;
-  box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
   border-radius: 2px;
+  padding: 60px 0;
+  picture {
+    box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
+  }
 }
