--- a/src/sass/pages/restaurant/_about-kitchen.scss
+++ b/src/sass/pages/restaurant/_about-kitchen.scss
@@ -77,7 +77,7 @@
   margin-bottom: 0px;
 
   @include tablet {
-    margin-bottom: 154px;
+    margin-bottom: 123px;
   }
   @include desktop {
     margin-bottom: 124px;
@@ -133,7 +133,7 @@
   justify-content: flex-end;
   padding-right: 2px;
   @include tablet {
-    margin-top: 32px;
+    margin-top: 0;
   }
   @include desktop {
     margin-top: 40px;
