add hhero room and fix modals and slider

--- a/src/partials/modal-price-room-for-2.html
+++ b/src/partials/modal-price-room-for-2.html
@@ -1,7 +1,11 @@
-<div class="backdrop is-hidden" data-modPrice2r>
+<div class="backdrop is-hidden" data-modPriceRoomFor2>
   <!-- is-hidden -->
   <div class="modal-price">
-    <button type="button" class="modal-price__btn-close" data-modPrice2r-close>
+    <button
+      type="button"
+      class="modal-price__btn-close"
+      data-modPriceRoomFor2-close
+    >
       <svg class="modal-price__icon-close" width="24" height="24">
         <use href="./images/sprite.svg#icon-close"></use>
       </svg>
