--- a/src/partials/pages/room-for-2/amenities.html
+++ b/src/partials/pages/room-for-2/amenities.html
@@ -69,7 +69,11 @@
         </div>
       </li>
     </ul>
-    <button class="button amenities-for-2__button" type="button">
+    <button
+      class="button amenities-for-2__button"
+      type="button"
+      data-modRoom-open
+    >
       ОФОРМИТИ БРОНЮВАННЯ
     </button>
     <a class="amenities-for-2__link" href="./hotel.html"
