--- a/src/partials/modal-price-room-for-3.html
+++ b/src/partials/modal-price-room-for-3.html
@@ -1,14 +1,18 @@
-<div class="backdrop is-hidden" data-modPrice2r>
+<div class="backdrop is-hidden" data-modPriceRoomFor3>
   <!-- is-hidden -->
   <div class="modal-price">
-    <button type="button" class="modal-price__btn-close" data-modPrice2r-close>
+    <button
+      type="button"
+      class="modal-price__btn-close"
+      data-modPriceRoomFor3-close
+    >
       <svg class="modal-price__icon-close" width="24" height="24">
         <use href="./images/sprite.svg#icon-close"></use>
       </svg>
     </button>
 
     <p class="modal-price__title">ЦІНИ НА НОМЕР</p>
-    <p class="modal-price__sub-title">Двохмісний номер</p>
+    <p class="modal-price__sub-title">Трьохмісний номер</p>
 
     <form class="form form__modal-price">
       <p class="modal-price__text">Категорія номеру</p>
@@ -17,20 +21,20 @@
           <div class="modal-price__input-wrap">
             <input
               type="number"
-              id="numberCast2"
-              name="numberCast2"
+              id="numberCast3"
+              name="numberCast3"
               class="modal-price__input input-cast"
               minlength="1"
               placeholder="2"
               min="1"
               pattern="^[0-9]"
               title="Must be number."
-              value="3"
+              value="2"
               required
             />
           </div>
 
-          <label for="numberCast2" class="modal-price__label-input"
+          <label for="numberCast3" class="modal-price__label-input"
             >Кількість ночей</label
           >
         </div>
@@ -40,8 +44,8 @@
           <div class="modal-price__input-wrap">
             <input
               type="number"
-              id="numberСost2"
-              name="numberСost2"
+              id="numberСost3"
+              name="numberСost3"
               class="modal-price__input"
               minlength="3"
               placeholder="1000"
