fix-validator id and "

--- a/src/partials/modal-menu-table.html
+++ b/src/partials/modal-menu-table.html
@@ -10,42 +10,21 @@
       <div class="modal__list">
         <div class="modal__wrap">
           <div class="modal__field">
-            <input
-              type="text"
-              name="user-name"
-              id="name"
-              class="modal__input"
-              placeholder="Ваше ім’я"
-              aria-label="ім’я"
-              required
-            />
-            <label for="name" class="modal__label"
-              >На кого забронювати столик?</label
-            >
+            <input type="text" name="user-name" id="name-bron" class="modal__input" placeholder="Ваше ім’я"
+              aria-label="ім’я" required />
+            <label for="name-bron" class="modal__label">На кого забронювати столик?</label>
           </div>
 
           <div class="modal__field">
-            <input
-              type="tel"
-              name="user-tel"
-              id="tel"
-              class="modal__input"
-              placeholder="+38 (___) ___-__-__"
-              aria-label="номер телефону"
-              pattern="+[0-9]"
-              required
-            />
-            <label for="tel" class="modal__label">Номер телефону</label>
+            <input type="tel" name="user-tel" id="tel2" class="modal__input" placeholder="+38 (___) ___-__-__"
+              aria-label="номер телефону" pattern="+[0-9]" required />
+            <label for="tel2" class="modal__label">Номер телефону</label>
           </div>
         </div>
 
         <div class="modal__wrap">
           <div class="modal__field">
-            <select
-              class="modal__input custom-select"
-              id="guests-number"
-              name="guests-number"
-            >
+            <select class="modal__input custom-select" id="guests-number2" name="guests-number">
               <option class="select-option" value="1">1</option>
               <option class="select-option" value="2" selected>2</option>
               <option class="select-option" value="3">3</option>
@@ -55,24 +34,13 @@
               <option class="select-option" value="7">7</option>
             </select>
 
-            <label class="modal__label" for="guests-number"
-              >Столик на яку кількість осіб?</label
-            >
+            <label class="modal__label" for="guests-number2">Столик на яку кількість осіб?</label>
           </div>
 
           <div class="modal__field">
-            <input
-              class="custom-date"
-              type="text"
-              value="Cьогодні"
-              placeholder="Сьогодні"
-              onfocus="(this.type = 'date')"
-              id="table-date"
-              name="table-date"
-            />
-            <label class="modal__label" for="table-date"
-              >На яку дату бронювати?</label
-            >
+            <input class="custom-date" type="text" value="Cьогодні" placeholder="Сьогодні"
+              onfocus="(this.type = 'date')" id="table-date2" name="table-date" />
+            <label class="modal__label" for="table-date2">На яку дату бронювати?</label>
           </div>
         </div>
       </div>
