--- a/src/partials/pages/hotel/room-for-3.html
+++ b/src/partials/pages/hotel/room-for-3.html
@@ -31,7 +31,7 @@
             ./images/hotel/hotel-1-mob.jpg    1x,
             ./images/hotel/hotel-1-mob-2x.jpg 2x
           "
-          media="(min-width: 414px)"
+          media="(max-width: 1023px)"
         />
         <img
           src="./images/hotel/hotel-1-desk.jpg"
@@ -40,216 +40,191 @@
         />
       </picture>
     </div>
+
     <div class="room-ror-3__slider-wrap">
       <div class="room-for-3__slider">
         <div class="room-for-3__bathroom room-slider">
-          <picture>
-            <source
-              srcset="
-                ./images/hotel/hotel-2-desk.jpg    1x,
-                ./images/hotel/hotel-2-desk-2x.jpg 2x
-              "
-              media="(min-width: 1280px)"
-            />
-            <source
-              srcset="
-                ./images/hotel/hotel-2-tab.jpg    1x,
-                ./images/hotel/hotel-2-tab-2x.jpg 2x
-              "
-              media="(min-width: 1024px)"
-            />
-            <source
-              srcset="
-                ./images/hotel/hotel-2-mob.jpg    1x,
-                ./images/hotel/hotel-2-mob-2x.jpg 2x
-              "
-              media="(min-width: 414px)"
-            />
-            <img
-              src="./images/hotel/hotel-2-desk.jpg"
-              alt="раковина біла"
-              sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
-            />
-          </picture>
           <div>
-            <picture>
+            <picture
+              ><source
+                srcset="
+                  ./images/hotel/hotel-2-desk.jpg    1x,
+                  ./images/hotel/hotel-2-desk-2x.jpg 2x
+                "
+                media="(min-width: 1280px)" />
               <source
+                srcset="
+                  ./images/hotel/hotel-2-tab.jpg    1x,
+                  ./images/hotel/hotel-2-tab-2x.jpg 2x
+                "
+                media="(min-width: 1024px)" />
+              <source
+                srcset="
+                  ./images/hotel/hotel-2-tab.jpg    1x,
+                  ./images/hotel/hotel-2-tab-2x.jpg 2x
+                "
+                media="(max-width: 1023px)" />
+              <img
+                src="./images/hotel/hotel-2-mob.jpg"
+                alt="біла ванна"
+                sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
+            /></picture>
+          </div>
+          <div>
+            <picture
+              ><source
                 srcset="
                   ./images/hotel/hotel-3-desk.jpg    1x,
                   ./images/hotel/hotel-3-desk-2x.jpg 2x
                 "
-                media="(min-width: 1280px)"
-              />
+                media="(min-width: 1280px)" />
               <source
                 srcset="
                   ./images/hotel/hotel-3-tab.jpg    1x,
                   ./images/hotel/hotel-3-tab-2x.jpg 2x
                 "
-                media="(min-width: 1024px)"
-              />
+                media="(min-width: 1024px)" />
               <source
                 srcset="
-                  ./images/hotel/hotel-3-mob.jpg    1x,
-                  ./images/hotel/hotel-3-mob-2x.jpg 2x
+                  ./images/hotel/hotel-3-tab.jpg    1x,
+                  ./images/hotel/hotel-3-tab-2x.jpg 2x
                 "
-                media="(min-width: 414px)"
-              />
+                media="(max-width: 1023px)" />
               <img
-                src="./images/hotel/hotel-3-desk.jpg"
-                alt="краєвид з вікна"
+                src="./images/hotel/hotel-3-mob.jpg"
+                alt="біла ванна"
                 sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
-              />
-            </picture>
+            /></picture>
           </div>
           <div>
-            <picture>
-              <source
+            <picture
+              ><source
                 srcset="
                   ./images/sliders/slider-2-desk.jpg    1x,
                   ./images/sliders/slider-2-desk-2x.jpg 2x
                 "
-                media="(min-width: 1280px)"
-              />
+                media="(min-width: 1280px)" />
               <source
                 srcset="
                   ./images/sliders/slider-2-tab.jpg    1x,
                   ./images/sliders/slider-2-tab-2x.jpg 2x
                 "
-                media="(min-width: 1024px)"
-              />
+                media="(min-width: 1024px)" />
               <source
                 srcset="
                   ./images/sliders/slider-2-tab.jpg    1x,
                   ./images/sliders/slider-2-tab-2x.jpg 2x
                 "
-                media="(min-width: 414px)"
-              />
+                media="(max-width: 1023px)" />
               <img
-                src="./images/sliders/slider-2-desk.jpg"
-                alt="ванна"
+                src="./images/sliders/slider-2-mob.jpg"
+                alt="біла ванна"
                 sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
-              />
-            </picture>
+            /></picture>
           </div>
           <div>
-            <picture>
-              <source
+            <picture
+              ><source
                 srcset="
                   ./images/sliders/slider-4-desk.jpg    1x,
                   ./images/sliders/slider-4-desk-2x.jpg 2x
                 "
-                media="(min-width: 1280px)"
-              />
+                media="(min-width: 1280px)" />
               <source
                 srcset="
                   ./images/sliders/slider-4-tab.jpg    1x,
                   ./images/sliders/slider-4-tab-2x.jpg 2x
                 "
-                media="(min-width: 1024px)"
-              />
+                media="(min-width: 1024px)" />
               <source
                 srcset="
                   ./images/sliders/slider-4-tab.jpg    1x,
                   ./images/sliders/slider-4-tab-2x.jpg 2x
                 "
-                media="(min-width: 414px)"
-              />
+                media="(max-width: 1023px)" />
               <img
-                src="./images/sliders/slider-4-desk.jpg"
-                alt="раковина з чорним краном"
+                src="./images/sliders/slider-4-mob.jpg"
+                alt="білий умивальник"
                 sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
-              />
-            </picture>
+            /></picture>
           </div>
           <div>
-            <picture>
-              <source
+            <picture
+              ><source
                 srcset="
                   ./images/sliders/slider-10-desk.jpg    1x,
                   ./images/sliders/slider-10-desk-2x.jpg 2x
                 "
-                media="(min-width: 1280px)"
-              />
+                media="(min-width: 1280px)" />
               <source
                 srcset="
                   ./images/sliders/slider-10-tab.jpg    1x,
                   ./images/sliders/slider-10-tab-2x.jpg 2x
                 "
-                media="(min-width: 1024px)"
-              />
+                media="(min-width: 1024px)" />
               <source
                 srcset="
                   ./images/sliders/slider-10-tab.jpg    1x,
                   ./images/sliders/slider-10-tab-2x.jpg 2x
                 "
-                media="(min-width: 414px)"
-              />
+                media="(max-width: 1023px)" />
               <img
-                src="./images/sliders/slider-10-desk.jpg"
-                alt="крема та полотенце"
+                src="./images/sliders/slider-10-mob.jpg"
+                alt="крем та рушник"
                 sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
-              />
-            </picture>
+            /></picture>
           </div>
           <div>
-            <picture>
-              <source
+            <picture
+              ><source
                 srcset="
                   ./images/sliders/slider-12-desk.jpg    1x,
                   ./images/sliders/slider-12-desk-2x.jpg 2x
                 "
-                media="(min-width: 1280px)"
-              />
+                media="(min-width: 1280px)" />
               <source
                 srcset="
                   ./images/sliders/slider-12-tab.jpg    1x,
                   ./images/sliders/slider-12-tab-2x.jpg 2x
                 "
-                media="(min-width: 1024px)"
-              />
+                media="(min-width: 1024px)" />
               <source
                 srcset="
                   ./images/sliders/slider-12-tab.jpg    1x,
                   ./images/sliders/slider-12-tab-2x.jpg 2x
                 "
-                media="(min-width: 414px)"
-              />
+                media="(max-width: 1023px)" />
               <img
-                src="./images/sliders/slider-12-desk.jpg"
-                alt="раковина з чорним милом"
+                src="./images/sliders/slider-12-mob.jpg"
+                alt="біла раковина"
                 sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
-              />
-            </picture>
+            /></picture>
           </div>
           <div>
-            <picture>
-              <source
+            <picture
+              ><source
                 srcset="
                   ./images/sliders/slider-13-desk.jpg    1x,
                   ./images/sliders/slider-13-desk-2x.jpg 2x
                 "
-                media="(min-width: 1280px)"
-              />
+                media="(min-width: 1280px)" />
               <source
                 srcset="
                   ./images/sliders/slider-13-tab.jpg    1x,
                   ./images/sliders/slider-13-tab-2x.jpg 2x
                 "
-                media="(min-width: 1024px)"
-              />
+                media="(min-width: 1024px)" />
               <source
                 srcset="
                   ./images/sliders/slider-13-tab.jpg    1x,
                   ./images/sliders/slider-13-tab-2x.jpg 2x
                 "
-                media="(min-width: 414px)"
-              />
+                media="(max-width: 1023px)" />
               <img
-                src="./images/sliders/slider-13-desk.jpg"
-                alt="раковина сіра"
+                src="./images/sliders/slider-13-mob.jpg"
+                alt="сіра раковина"
                 sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
-              />
-            </picture>
+            /></picture>
           </div>
         </div>
         <div class="room-for-3-svg">
@@ -261,6 +236,7 @@
           </svg>
         </div>
       </div>
+
       <div class="room-for-3-btn__wrap">
         <a
           href="./room-for-3.html"
@@ -270,7 +246,6 @@
         <button
           type="button"
           class="room-for-3-btn__price btn btn--hotel-and-rest"
-          data-modPrice3r-open
         >
           Переглянути ціни
         </button>
