--- a/src/sass/pages/hotel/_room-for-3.scss
+++ b/src/sass/pages/hotel/_room-for-3.scss
@@ -1,3 +1,13 @@
+.room-for-3 {
+  @include mobilemax {
+    overflow: hidden;
+  }
+
+  @include desktop {
+    padding-bottom: 65px;
+  }
+}
+
 .room-for-3__container {
   position: relative;
 }
@@ -84,30 +94,10 @@
   }
 }
 
-.room-ror-3__slider-wrap {
-  position: relative;
-  @include tablet {
-    display: flex;
-    flex-direction: row-reverse;
-  }
-}
-
-.room-for-3__slider {
-  margin-bottom: 72px;
-  overflow: hidden;
-  margin-left: 115px;
-  @include tablet {
-    margin-bottom: 0;
-    margin-left: 266px;
-  }
-  @include desktop {
-    margin-left: 326px;
-  }
-}
-
 .room-for-3__bathroom {
   display: flex;
   gap: 16px;
+  margin-bottom: 25px;
   @include tablet {
     gap: 40px;
   }
@@ -124,8 +114,13 @@
   align-items: center;
   gap: 16px;
   @include tablet {
+    height: 194px;
     margin-top: 0;
     justify-content: center;
+  }
+
+  @include desktop {
+    height: 254px;
   }
 }
 
@@ -140,9 +135,17 @@
   right: 0%;
   justify-content: flex-end;
   display: flex;
-  position: absolute;
   fill: $colorBlack;
   cursor: pointer;
+
+  @include mobilemax {
+    padding-right: 18px;
+  }
+
+  @include tablet {
+    justify-content: start;
+  }
+
   @include tablet {
     bottom: -35%;
     right: 35%;
@@ -169,15 +172,67 @@
   }
 }
 
-// SLICK
+// SLIDER
 
-.room-for-3__slider .slick-track {
+.room-ror-3__slider-wrap {
+  max-width: 100%;
   display: flex;
-  gap: 16px;
+  flex-direction: column;
+  justify-content: end;
+
   @include tablet {
-    gap: 40px;
+    flex-direction: row-reverse;
   }
+}
+
+.room-for-3__slider {
+  max-width: 284px;
+
+  @include mobilemax {
+    margin-bottom: 25px;
+    margin-right: -15px;
+    padding-left: 115px;
+  }
+
+  @include tablet {
+    max-width: 430px;
+    margin-left: auto;
+  }
+
   @include desktop {
-    gap: 40px;
+    max-width: 548px;
+  }
+
+  .slick-track {
+    display: flex;
+    gap: 16px;
+    @include tablet {
+      gap: 40px;
+    }
+    @include desktop {
+      gap: 40px;
+    }
+  }
+
+  .slick-list {
+    @include mobilemax {
+      margin-right: -270px;
+    }
+
+    overflow: hidden;
+    padding: 30px;
+    margin: -30px;
+  }
+
+  .slick-slide {
+    opacity: 0;
+    transition: opacity $transDuration $cubic;
+  }
+
+  .slick-active {
+    opacity: 1;
+    border-radius: 2px;
+
+    box-shadow: 2px 2px 20px 2px rgba(0, 0, 0, 0.25);
   }
 }
