--- a/src/sass/pages/hotel/_room-luxe.scss
+++ b/src/sass/pages/hotel/_room-luxe.scss
@@ -189,7 +189,7 @@
   height: 100%;
 
   @include mobilemax {
-    max-width: 100vw;
+    max-width: 94vw;
     padding-bottom: 42px;
   }
 
@@ -200,18 +200,13 @@
     }
 
     @include tablet {
-      padding-top: 28px;
-      padding-bottom: 28px;
+      padding: 28px 68px;
+      margin-left: -68px;
       margin-top: -28px;
-      // max-height: 194px;
       min-width: 428px;
-
-      padding-left: 28px;
-      margin-left: -28px;
     }
 
     @include desktop {
-      // max-height: 254px;
       min-width: 548px;
     }
   }
