shadow fixes, found a way around with "inset"

--- a/src/sass/pages/restaurant/_about-kitchen.scss
+++ b/src/sass/pages/restaurant/_about-kitchen.scss
@@ -171,8 +171,8 @@
 
 .kitchen-slider {
   margin-right: -15px;
-  box-shadow: inset 2px 2px 60px 2px rgba(0, 0, 0, 0.25),
-    2px 2px 60px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 0px 60px 2px rgba(0, 0, 0, 0.25),
+    2px 0px 60px 2px rgba(0, 0, 0, 0.25);
   @include tablet {
     width: 428px;
     margin-left: auto;
@@ -196,5 +196,8 @@
 
 .kitchen-slide {
   border-radius: 2px;
+  display: block;
   overflow: hidden;
+  box-shadow: 5px 0 20px -5px rgba(0, 0, 0, 0.25),
+    -5px 0 20px -5px rgba(0, 0, 0, 0.25);
 }
