--- a/src/sass/components/_hotel-text.scss
+++ b/src/sass/components/_hotel-text.scss
@@ -2,7 +2,7 @@
   width: 258px;
   height: 76px;
   @include font(600, 12px, 1.25, 0.02em);
-  color: #5f5f5f;
+  color: $colorTextPrimary;
   margin-top: 12px;
 
   @include tablet {
