--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -14,29 +14,31 @@
         <picture class="kitchen-card__photo">
           <source
             srcset="
-              ./images/restaurant/restaurant-1-desk.jpg    1x,
-              ./images/restaurant/restaurant-1-desk-2x.jpg 2x
+              ./images/restaurant/restaurant-1-desk.jpg    460w,
+              ./images/restaurant/restaurant-1-desk-2x.jpg 920w
             "
             media="(min-width: 1280px)"
+            sizes="(min-width: 1280px) 460px, 100vw"
           />
           <source
             srcset="
-              ./images/restaurant/restaurant-1-tab.jpg    1x,
-              ./images/restaurant/restaurant-1-tab-2x.jpg 2x
+              ./images/restaurant/restaurant-1-tab.jpg    400w,
+              ./images/restaurant/restaurant-1-tab-2x.jpg 800w
             "
             media="(min-width: 1024px)"
+            sizes="(min-width: 1024px) 400px, 100vw"
           />
           <source
             srcset="
-              ./images/restaurant/restaurant-1-mob.jpg    1x,
-              ./images/restaurant/restaurant-1-mob-2x.jpg 2x
+              ./images/restaurant/restaurant-1-mob.jpg    244w,
+              ./images/restaurant/restaurant-1-mob-2x.jpg 488w
             "
-            media="(min-width: 414px)"
+            media="(min-width: 320px)"
+            sizes="(min-width: 320px) 244px"
           />
           <img
             src="./images/restaurant/restaurant-1-mob.jpg"
             alt="повар готує на кухні"
-            sizes="(min-width: 1280px) 460px, (min-width: 1024px) 400px, (min-width: 414px) 244px, 80vw"
           />
         </picture>
       </div>
@@ -45,29 +47,31 @@
         <picture class="kitchen-card__photo">
           <source
             srcset="
-              ./images/restaurant/restaurant-2-desk.jpg    1x,
-              ./images/restaurant/restaurant-2-desk-2x.jpg 2x
+              ./images/restaurant/restaurant-2-desk.jpg    460w,
+              ./images/restaurant/restaurant-2-desk-2x.jpg 920w
             "
             media="(min-width: 1280px)"
+            sizes="(min-width: 1280px) 460px, 100vw"
           />
           <source
             srcset="
-              ./images/restaurant/restaurant-2-tab.jpg    1x,
-              ./images/restaurant/restaurant-2-tab-2x.jpg 2x
+              ./images/restaurant/restaurant-2-tab.jpg    350w,
+              ./images/restaurant/restaurant-2-tab-2x.jpg 700w
             "
             media="(min-width: 1024px)"
+            sizes="(min-width: 1024px) 350px, 100vw"
           />
           <source
             srcset="
-              ./images/restaurant/restaurant-2-mob.jpg    1x,
-              ./images/restaurant/restaurant-2-mob-2x.jpg 2x
+              ./images/restaurant/restaurant-2-mob.jpg    200w,
+              ./images/restaurant/restaurant-2-mob-2x.jpg 400w
             "
-            media="(min-width: 414px)"
+            media="(min-width: 320px)"
+            sizes="(min-width: 320px) 200px"
           />
           <img
             src="./images/restaurant/restaurant-2-mob.jpg"
-            alt="м'ясо на дошці для нарізання"
-            sizes="(min-width: 1280px) 460px, (min-width: 1024px) 350px, (min-width: 414px) 200px, 40vw"
+            alt="повар готує на кухні"
           />
         </picture>
 
@@ -85,30 +89,32 @@
           <picture>
             <source
               srcset="
-                ./images/sliders/slider-6-desk.jpg    1x,
-                ./images/sliders/slider-6-desk-2x.jpg 2x
+                ./images/sliders/slider-6-desk.jpg    245w,
+                ./images/sliders/slider-6-desk-2x.jpg 490w
               "
               media="(min-width: 1280px)"
+              sizes="(min-width: 1280px) 245px, 100vw"
             />
             <source
               srcset="
-                ./images/sliders/slider-6-tab.jpg    1x,
-                ./images/sliders/slider-6-tab-2x.jpg 2x
+                ./images/sliders/slider-6-tab.jpg    194w,
+                ./images/sliders/slider-6-tab-2x.jpg 388w
               "
               media="(min-width: 1024px)"
+              sizes="(min-width: 1024px) 194px, 100vw"
             />
             <source
               srcset="
-                ./images/sliders/slider-6-mob.jpg    1x,
-                ./images/sliders/slider-6-mob-2x.jpg 2x
+                ./images/sliders/slider-6-mob.jpg    245w,
+                ./images/sliders/slider-6-mob-2x.jpg 490w
               "
-              media="(min-width: 414px)"
+              media="(min-width: 320px)"
+              sizes="(min-width: 320px) 245px"
             />
             <img
               class="autoplay__photo"
               src="./images/sliders/slider-6-mob.jpg"
               alt="наливають чай у чашку"
-              sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
             />
           </picture>
         </div>
@@ -116,30 +122,32 @@
           <picture>
             <source
               srcset="
-                ./images/sliders/slider-7-desk.jpg    1x,
-                ./images/sliders/slider-7-desk-2x.jpg 2x
+                ./images/sliders/slider-7-desk.jpg    245w,
+                ./images/sliders/slider-7-desk-2x.jpg 490w
               "
               media="(min-width: 1280px)"
+              sizes="(min-width: 1280px) 245px, 100vw"
             />
             <source
               srcset="
-                ./images/sliders/slider-7-tab.jpg    1x,
-                ./images/sliders/slider-7-tab-2x.jpg 2x
+                ./images/sliders/slider-7-tab.jpg    194w,
+                ./images/sliders/slider-7-tab-2x.jpg 388w
               "
               media="(min-width: 1024px)"
+              sizes="(min-width: 1024px) 194px, 100vw"
             />
             <source
               srcset="
-                ./images/sliders/slider-7-mob.jpg    1x,
-                ./images/sliders/slider-7-mob-2x.jpg 2x
+                ./images/sliders/slider-7-mob.jpg    245w,
+                ./images/sliders/slider-7-mob-2x.jpg 490w
               "
-              media="(min-width: 414px)"
+              media="(min-width: 320px)"
+              sizes="(min-width: 320px) 245px"
             />
             <img
               class="autoplay__photo"
               src="./images/sliders/slider-7-mob.jpg"
-              alt="устриці та шампанське"
-              sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
+              alt="наливають чай у чашку"
             />
           </picture>
         </div>
@@ -147,30 +155,32 @@
           <picture>
             <source
               srcset="
-                ./images/sliders/slider-9-desk.jpg    1x,
-                ./images/sliders/slider-9-desk-2x.jpg 2x
+                ./images/sliders/slider-9-desk.jpg    245w,
+                ./images/sliders/slider-9-desk-2x.jpg 490w
               "
               media="(min-width: 1280px)"
+              sizes="(min-width: 1280px) 245px, 100vw"
             />
             <source
               srcset="
-                ./images/sliders/slider-9-tab.jpg    1x,
-                ./images/sliders/slider-9-tab-2x.jpg 2x
+                ./images/sliders/slider-9-tab.jpg    194w,
+                ./images/sliders/slider-9-tab-2x.jpg 388w
               "
               media="(min-width: 1024px)"
+              sizes="(min-width: 1024px) 194px, 100vw"
             />
             <source
               srcset="
-                ./images/sliders/slider-9-mob.jpg    1x,
-                ./images/sliders/slider-9-mob-2x.jpg 2x
+                ./images/sliders/slider-9-mob.jpg    245w,
+                ./images/sliders/slider-9-mob-2x.jpg 490w
               "
-              media="(min-width: 414px)"
+              media="(min-width: 320px)"
+              sizes="(min-width: 320px) 245px"
             />
             <img
               class="autoplay__photo"
               src="./images/sliders/slider-9-mob.jpg"
-              alt="гарно сервірований стіл на вулиці"
-              sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
+              alt="наливають чай у чашку"
             />
           </picture>
         </div>
@@ -178,30 +188,32 @@
           <picture>
             <source
               srcset="
-                ./images/sliders/slider-15-desk.jpg    1x,
-                ./images/sliders/slider-15-desk-2x.jpg 2x
+                ./images/sliders/slider-15-desk.jpg    245w,
+                ./images/sliders/slider-15-desk-2x.jpg 490w
               "
               media="(min-width: 1280px)"
+              sizes="(min-width: 1280px) 245px, 100vw"
             />
             <source
               srcset="
-                ./images/sliders/slider-15-tab.jpg    1x,
-                ./images/sliders/slider-15-tab-2x.jpg 2x
+                ./images/sliders/slider-15-tab.jpg    194w,
+                ./images/sliders/slider-15-tab-2x.jpg 388w
               "
               media="(min-width: 1024px)"
+              sizes="(min-width: 1024px) 194px, 100vw"
             />
             <source
               srcset="
-                ./images/sliders/slider-15-mob.jpg    1x,
-                ./images/sliders/slider-15-mob-2x.jpg 2x
+                ./images/sliders/slider-15-mob.jpg    245w,
+                ./images/sliders/slider-15-mob-2x.jpg 490w
               "
-              media="(min-width: 414px)"
+              media="(min-width: 320px)"
+              sizes="(min-width: 320px) 245px"
             />
             <img
               class="autoplay__photo"
               src="./images/sliders/slider-15-mob.jpg"
-              alt="гарно сервірований стіл у приміщенні"
-              sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
+              alt="наливають чай у чашку"
             />
           </picture>
         </div>
@@ -209,30 +221,32 @@
           <picture>
             <source
               srcset="
-                ./images/sliders/slider-16-desk.jpg    1x,
-                ./images/sliders/slider-16-desk-2x.jpg 2x
+                ./images/sliders/slider-16-desk.jpg    245w,
+                ./images/sliders/slider-16-desk-2x.jpg 490w
               "
               media="(min-width: 1280px)"
+              sizes="(min-width: 1280px) 245px, 100vw"
             />
             <source
               srcset="
-                ./images/sliders/slider-16-tab.jpg    1x,
-                ./images/sliders/slider-16-tab-2x.jpg 2x
+                ./images/sliders/slider-16-tab.jpg    194w,
+                ./images/sliders/slider-16-tab-2x.jpg 388w
               "
               media="(min-width: 1024px)"
+              sizes="(min-width: 1024px) 194px, 100vw"
             />
             <source
               srcset="
-                ./images/sliders/slider-16-mob.jpg    1x,
-                ./images/sliders/slider-16-mob-2x.jpg 2x
+                ./images/sliders/slider-16-mob.jpg    245w,
+                ./images/sliders/slider-16-mob-2x.jpg 490w
               "
-              media="(min-width: 414px)"
+              media="(min-width: 320px)"
+              sizes="(min-width: 320px) 245px"
             />
             <img
               class="autoplay__photo"
               src="./images/sliders/slider-16-mob.jpg"
-              alt="сніданок у ліжко"
-              sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
+              alt="наливають чай у чашку"
             />
           </picture>
         </div>
