fix alt img about-restaurant

--- a/src/partials/about-restaurant.html
+++ b/src/partials/about-restaurant.html
@@ -38,7 +38,7 @@
           />
           <img
             src="./images/main/about-restaurant/about-rest-1-mob.jpg"
-            alt="Порожня зала ресторану"
+            alt="порожня зала ресторану"
           />
         </picture>
       </div>
@@ -71,7 +71,7 @@
           />
           <img
             src="./images/main/about-restaurant/about-rest-2-mob.jpg"
-            alt="Порожній зал ресторану"
+            alt="порожній зал ресторану"
           />
         </picture>
 
@@ -147,7 +147,7 @@
             <img
               class="autoplay__photo"
               src="./images/sliders/slider-15-mob.jpg"
-              alt="гарно сервірований стіл у приміщенні"
+              alt="сніданок у ліжко"
             />
           </picture>
         </div>
@@ -213,7 +213,7 @@
             <img
               class="autoplay__photo"
               src="./images/sliders/slider-7-mob.jpg"
-              alt="гарно сервірований стіл у приміщенні"
+              alt="устриці та шампанське"
             />
           </picture>
         </div>
@@ -246,7 +246,7 @@
             <img
               class="autoplay__photo"
               src="./images/sliders/slider-16-mob.jpg"
-              alt="гарно сервірований стіл у приміщенні"
+              alt="мюслі з ягодами на столі"
             />
           </picture>
         </div>
