fix alt img about-kitchen

--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -71,7 +71,7 @@
           />
           <img
             src="./images/restaurant/restaurant-2-mob.jpg"
-            alt="повар готує на кухні"
+            alt="м'ясо на дошці для нарізання"
           />
         </picture>
 
@@ -147,7 +147,7 @@
             <img
               class="autoplay__photo"
               src="./images/sliders/slider-7-mob.jpg"
-              alt="наливають чай у чашку"
+              alt="устриці та шампанське"
             />
           </picture>
         </div>
@@ -180,7 +180,7 @@
             <img
               class="autoplay__photo"
               src="./images/sliders/slider-9-mob.jpg"
-              alt="наливають чай у чашку"
+              alt="гарно сервірований стіл на вулиці"
             />
           </picture>
         </div>
@@ -213,7 +213,7 @@
             <img
               class="autoplay__photo"
               src="./images/sliders/slider-15-mob.jpg"
-              alt="наливають чай у чашку"
+              alt="сніданок у ліжко"
             />
           </picture>
         </div>
@@ -246,7 +246,7 @@
             <img
               class="autoplay__photo"
               src="./images/sliders/slider-16-mob.jpg"
-              alt="наливають чай у чашку"
+              alt="мюслі з ягодами на столі"
             />
           </picture>
         </div>
