fix bags name "source" in details-hotel

--- a/src/partials/details-hotel.html
+++ b/src/partials/details-hotel.html
@@ -12,11 +12,11 @@
       <div class="detail-hotel__slider variable-width">
         <div>
           <picture>
-            <sourc2
+            <source
               srcset="
-                  ./images/main/details-hotel/details-hotel-3-desk.jpg    1x,
-                  ./images/main/details-hotel/details-hotel-3-desk-2x.jpg 2x
-                "
+                ./images/main/details-hotel/details-hotel-3-desk.jpg    1x,
+                ./images/main/details-hotel/details-hotel-3-desk-2x.jpg 2x
+              "
               media="(min-width: 1280px)"
             />
             <source
@@ -99,11 +99,11 @@
         </div>
         <div>
           <picture>
-            <sourc2
+            <source
               srcset="
-                  ./images/main/details-hotel/details-hotel-3-desk.jpg    1x,
-                  ./images/main/details-hotel/details-hotel-3-desk-2x.jpg 2x
-                "
+                ./images/main/details-hotel/details-hotel-3-desk.jpg    1x,
+                ./images/main/details-hotel/details-hotel-3-desk-2x.jpg 2x
+              "
               media="(min-width: 1280px)"
             />
             <source
@@ -186,11 +186,11 @@
         </div>
         <div>
           <picture>
-            <sourc2
+            <source
               srcset="
-                  ./images/main/details-hotel/details-hotel-3-desk.jpg    1x,
-                  ./images/main/details-hotel/details-hotel-3-desk-2x.jpg 2x
-                "
+                ./images/main/details-hotel/details-hotel-3-desk.jpg    1x,
+                ./images/main/details-hotel/details-hotel-3-desk-2x.jpg 2x
+              "
               media="(min-width: 1280px)"
             />
             <source
