fix mobile scroll
профіксив скрол модалок для екранів з малою шириною.

--- a/src/sass/components/_modal-price.scss
+++ b/src/sass/components/_modal-price.scss
@@ -21,6 +21,10 @@
       min-height: 489px;
       padding: 60px;
     }
+    @media screen and (max-height: 580px) {
+      top: 100vh;
+    }
+  
 }
 
 .modal-price__btn-close {
