--- a/src/sass/pages/hotel/_room-for-2.scss
+++ b/src/sass/pages/hotel/_room-for-2.scss
@@ -172,6 +172,11 @@
   @include tablet {
     margin-bottom: 81px;
   }
+  @include mobilemax {
+       padding-left: 0px;
+  align-items: center;
+  }
+ 
 }
 
 .hotel-link {
