--- a/src/sass/pages/hotel/_room-for-3.scss
+++ b/src/sass/pages/hotel/_room-for-3.scss
@@ -3,6 +3,10 @@
     overflow: hidden;
   }
 
+  @include tablet {
+    padding-bottom: 104px;
+  }
+
   @include desktop {
     padding-bottom: 65px;
   }
