--- a/src/sass/pages/hotel/_module.scss
+++ b/src/sass/pages/hotel/_module.scss
@@ -1,4 +1,4 @@
-@import "./hero";
-@import "./room-luxe";
-@import "./room-for-3";
-@import "./room-for-2";
+@import './hero';
+@import './room-luxe';
+@import './room-for-3';
+@import './room-for-2';
