--- a/src/partials/details-hotel.html
+++ b/src/partials/details-hotel.html
@@ -276,7 +276,7 @@
         <!-- Book Room Modal window -->
         <button
           type="button"
-          class="btn btn--hotel-and-rest details-hotel__button data-modal-open"
+          class="btn btn--hotel-and-rest details-hotel__button"
           data-modDetRoom-open
         >
           Забронювати номер
