--- a/src/partials/pages/hotel/room-for-3.html
+++ b/src/partials/pages/hotel/room-for-3.html
@@ -246,6 +246,7 @@
         <button
           type="button"
           class="room-for-3-btn__price btn btn--hotel-and-rest"
+          data-modPrice3r-open
         >
           Переглянути ціни
         </button>
