fix-3-oom-slide

--- a/src/partials/pages/hotel/room-for-3.html
+++ b/src/partials/pages/hotel/room-for-3.html
@@ -43,7 +43,7 @@
 
     <div class="room-ror-3__slider-wrap">
       <div class="room-for-3__slider">
-        <div class="room-for-3__bathroom room-slider">
+        <div class="room-for-3__bathroom room-slider-for-3">
           <div>
             <picture
               ><source
@@ -228,10 +228,10 @@
           </div>
         </div>
         <div class="room-for-3-svg">
-          <svg class="room-for-3-svg__left prev" width="32" height="32">
+          <svg class="room-for-3-svg__left" width="32" height="32">
             <use href="./images/sprite.svg#icon-cil_arrow-left32"></use>
           </svg>
-          <svg class="room-for-3-svg__right next" width="32" height="32">
+          <svg class="room-for-3-svg__right" width="32" height="32">
             <use href="./images/sprite.svg#icon-cil_arrow-right32"></use>
           </svg>
         </div>
