fix main hotel slider

--- a/src/partials/about-hotel.html
+++ b/src/partials/about-hotel.html
@@ -89,7 +89,7 @@
     </div>
 
     <div class="hotel-slider-box">
-      <div class="about-hotel-slider">
+      <div class="hotel-slider">
         <div class="hotel-slide">
           <picture>
             <source
