--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -84,171 +84,173 @@
     </div>
 
     <div class="kitchen-slider-box">
-      <div class="kitchen-slider">
-        <div class="kitchen-slide">
-          <picture>
-            <source
-              srcset="
-                ./images/sliders/slider-6-desk.jpg    245w,
-                ./images/sliders/slider-6-desk-2x.jpg 490w
-              "
-              media="(min-width: 1280px)"
-              sizes="(min-width: 1280px) 245px, 100vw"
-            />
-            <source
-              srcset="
-                ./images/sliders/slider-6-tab.jpg    194w,
-                ./images/sliders/slider-6-tab-2x.jpg 388w
-              "
-              media="(min-width: 1024px)"
-              sizes="(min-width: 1024px) 194px, 100vw"
-            />
-            <source
-              srcset="
-                ./images/sliders/slider-6-mob.jpg    245w,
-                ./images/sliders/slider-6-mob-2x.jpg 490w
-              "
-              media="(min-width: 320px)"
-              sizes="(min-width: 320px) 245px"
-            />
-            <img
-              class="autoplay__photo"
-              src="./images/sliders/slider-6-mob.jpg"
-              alt="наливають чай у чашку"
-            />
-          </picture>
-        </div>
-        <div class="kitchen-slide">
-          <picture>
-            <source
-              srcset="
-                ./images/sliders/slider-7-desk.jpg    245w,
-                ./images/sliders/slider-7-desk-2x.jpg 490w
-              "
-              media="(min-width: 1280px)"
-              sizes="(min-width: 1280px) 245px, 100vw"
-            />
-            <source
-              srcset="
-                ./images/sliders/slider-7-tab.jpg    194w,
-                ./images/sliders/slider-7-tab-2x.jpg 388w
-              "
-              media="(min-width: 1024px)"
-              sizes="(min-width: 1024px) 194px, 100vw"
-            />
-            <source
-              srcset="
-                ./images/sliders/slider-7-mob.jpg    245w,
-                ./images/sliders/slider-7-mob-2x.jpg 490w
-              "
-              media="(min-width: 320px)"
-              sizes="(min-width: 320px) 245px"
-            />
-            <img
-              class="autoplay__photo"
-              src="./images/sliders/slider-7-mob.jpg"
-              alt="устриці та шампанське"
-            />
-          </picture>
-        </div>
-        <div class="kitchen-slide">
-          <picture>
-            <source
-              srcset="
-                ./images/sliders/slider-9-desk.jpg    245w,
-                ./images/sliders/slider-9-desk-2x.jpg 490w
-              "
-              media="(min-width: 1280px)"
-              sizes="(min-width: 1280px) 245px, 100vw"
-            />
-            <source
-              srcset="
-                ./images/sliders/slider-9-tab.jpg    194w,
-                ./images/sliders/slider-9-tab-2x.jpg 388w
-              "
-              media="(min-width: 1024px)"
-              sizes="(min-width: 1024px) 194px, 100vw"
-            />
-            <source
-              srcset="
-                ./images/sliders/slider-9-mob.jpg    245w,
-                ./images/sliders/slider-9-mob-2x.jpg 490w
-              "
-              media="(min-width: 320px)"
-              sizes="(min-width: 320px) 245px"
-            />
-            <img
-              class="autoplay__photo"
-              src="./images/sliders/slider-9-mob.jpg"
-              alt="гарно сервірований стіл на вулиці"
-            />
-          </picture>
-        </div>
-        <div class="kitchen-slide">
-          <picture>
-            <source
-              srcset="
-                ./images/sliders/slider-15-desk.jpg    245w,
-                ./images/sliders/slider-15-desk-2x.jpg 490w
-              "
-              media="(min-width: 1280px)"
-              sizes="(min-width: 1280px) 245px, 100vw"
-            />
-            <source
-              srcset="
-                ./images/sliders/slider-15-tab.jpg    194w,
-                ./images/sliders/slider-15-tab-2x.jpg 388w
-              "
-              media="(min-width: 1024px)"
-              sizes="(min-width: 1024px) 194px, 100vw"
-            />
-            <source
-              srcset="
-                ./images/sliders/slider-15-mob.jpg    245w,
-                ./images/sliders/slider-15-mob-2x.jpg 490w
-              "
-              media="(min-width: 320px)"
-              sizes="(min-width: 320px) 245px"
-            />
-            <img
-              class="autoplay__photo"
-              src="./images/sliders/slider-15-mob.jpg"
-              alt="сніданок у ліжко"
-            />
-          </picture>
-        </div>
-        <div class="kitchen-slide">
-          <picture>
-            <source
-              srcset="
-                ./images/sliders/slider-16-desk.jpg    245w,
-                ./images/sliders/slider-16-desk-2x.jpg 490w
-              "
-              media="(min-width: 1280px)"
-              sizes="(min-width: 1280px) 245px, 100vw"
-            />
-            <source
-              srcset="
-                ./images/sliders/slider-16-tab.jpg    194w,
-                ./images/sliders/slider-16-tab-2x.jpg 388w
-              "
-              media="(min-width: 1024px)"
-              sizes="(min-width: 1024px) 194px, 100vw"
-            />
-            <source
-              srcset="
-                ./images/sliders/slider-16-mob.jpg    245w,
-                ./images/sliders/slider-16-mob-2x.jpg 490w
-              "
-              media="(min-width: 320px)"
-              sizes="(min-width: 320px) 245px"
-            />
-            <img
-              class="autoplay__photo"
-              src="./images/sliders/slider-16-mob.jpg"
-              alt="мюслі з ягодами на столі"
-            />
-          </picture>
+      <div class="kitchen-slider-thumb">
+        <div class="kitchen-slider">
+          <div class="kitchen-slide">
+            <picture>
+              <source
+                srcset="
+                  ./images/sliders/slider-6-desk.jpg    245w,
+                  ./images/sliders/slider-6-desk-2x.jpg 490w
+                "
+                media="(min-width: 1280px)"
+                sizes="(min-width: 1280px) 245px, 100vw"
+              />
+              <source
+                srcset="
+                  ./images/sliders/slider-6-tab.jpg    194w,
+                  ./images/sliders/slider-6-tab-2x.jpg 388w
+                "
+                media="(min-width: 1024px)"
+                sizes="(min-width: 1024px) 194px, 100vw"
+              />
+              <source
+                srcset="
+                  ./images/sliders/slider-6-mob.jpg    245w,
+                  ./images/sliders/slider-6-mob-2x.jpg 490w
+                "
+                media="(min-width: 320px)"
+                sizes="(min-width: 320px) 245px"
+              />
+              <img
+                class="autoplay__photo"
+                src="./images/sliders/slider-6-mob.jpg"
+                alt="наливають чай у чашку"
+              />
+            </picture>
+          </div>
+          <div class="kitchen-slide">
+            <picture>
+              <source
+                srcset="
+                  ./images/sliders/slider-7-desk.jpg    245w,
+                  ./images/sliders/slider-7-desk-2x.jpg 490w
+                "
+                media="(min-width: 1280px)"
+                sizes="(min-width: 1280px) 245px, 100vw"
+              />
+              <source
+                srcset="
+                  ./images/sliders/slider-7-tab.jpg    194w,
+                  ./images/sliders/slider-7-tab-2x.jpg 388w
+                "
+                media="(min-width: 1024px)"
+                sizes="(min-width: 1024px) 194px, 100vw"
+              />
+              <source
+                srcset="
+                  ./images/sliders/slider-7-mob.jpg    245w,
+                  ./images/sliders/slider-7-mob-2x.jpg 490w
+                "
+                media="(min-width: 320px)"
+                sizes="(min-width: 320px) 245px"
+              />
+              <img
+                class="autoplay__photo"
+                src="./images/sliders/slider-7-mob.jpg"
+                alt="устриці та шампанське"
+              />
+            </picture>
+          </div>
+          <div class="kitchen-slide">
+            <picture>
+              <source
+                srcset="
+                  ./images/sliders/slider-9-desk.jpg    245w,
+                  ./images/sliders/slider-9-desk-2x.jpg 490w
+                "
+                media="(min-width: 1280px)"
+                sizes="(min-width: 1280px) 245px, 100vw"
+              />
+              <source
+                srcset="
+                  ./images/sliders/slider-9-tab.jpg    194w,
+                  ./images/sliders/slider-9-tab-2x.jpg 388w
+                "
+                media="(min-width: 1024px)"
+                sizes="(min-width: 1024px) 194px, 100vw"
+              />
+              <source
+                srcset="
+                  ./images/sliders/slider-9-mob.jpg    245w,
+                  ./images/sliders/slider-9-mob-2x.jpg 490w
+                "
+                media="(min-width: 320px)"
+                sizes="(min-width: 320px) 245px"
+              />
+              <img
+                class="autoplay__photo"
+                src="./images/sliders/slider-9-mob.jpg"
+                alt="гарно сервірований стіл на вулиці"
+              />
+            </picture>
+          </div>
+          <div class="kitchen-slide">
+            <picture>
+              <source
+                srcset="
+                  ./images/sliders/slider-15-desk.jpg    245w,
+                  ./images/sliders/slider-15-desk-2x.jpg 490w
+                "
+                media="(min-width: 1280px)"
+                sizes="(min-width: 1280px) 245px, 100vw"
+              />
+              <source
+                srcset="
+                  ./images/sliders/slider-15-tab.jpg    194w,
+                  ./images/sliders/slider-15-tab-2x.jpg 388w
+                "
+                media="(min-width: 1024px)"
+                sizes="(min-width: 1024px) 194px, 100vw"
+              />
+              <source
+                srcset="
+                  ./images/sliders/slider-15-mob.jpg    245w,
+                  ./images/sliders/slider-15-mob-2x.jpg 490w
+                "
+                media="(min-width: 320px)"
+                sizes="(min-width: 320px) 245px"
+              />
+              <img
+                class="autoplay__photo"
+                src="./images/sliders/slider-15-mob.jpg"
+                alt="сніданок у ліжко"
+              />
+            </picture>
+          </div>
+          <div class="kitchen-slide">
+            <picture>
+              <source
+                srcset="
+                  ./images/sliders/slider-16-desk.jpg    245w,
+                  ./images/sliders/slider-16-desk-2x.jpg 490w
+                "
+                media="(min-width: 1280px)"
+                sizes="(min-width: 1280px) 245px, 100vw"
+              />
+              <source
+                srcset="
+                  ./images/sliders/slider-16-tab.jpg    194w,
+                  ./images/sliders/slider-16-tab-2x.jpg 388w
+                "
+                media="(min-width: 1024px)"
+                sizes="(min-width: 1024px) 194px, 100vw"
+              />
+              <source
+                srcset="
+                  ./images/sliders/slider-16-mob.jpg    245w,
+                  ./images/sliders/slider-16-mob-2x.jpg 490w
+                "
+                media="(min-width: 320px)"
+                sizes="(min-width: 320px) 245px"
+              />
+              <img
+                class="autoplay__photo"
+                src="./images/sliders/slider-16-mob.jpg"
+                alt="мюслі з ягодами на столі"
+              />
+            </picture>
+          </div>
         </div>
       </div>
 
