add blocked input (грн)

--- a/src/partials/modal-price.html
+++ b/src/partials/modal-price.html
@@ -57,6 +57,7 @@
               placeholder="1000"
               min="100"
               value="1000"
+              disabled
               required
             />
           </div>
