added orange arrow for hover effects, removed red shadow (used for convenience)

--- a/src/sass/pages/restaurant/_about-kitchen.scss
+++ b/src/sass/pages/restaurant/_about-kitchen.scss
@@ -150,6 +150,12 @@
   border: none;
   background-color: transparent;
 }
+.right-arrow:focus,
+.right-arrow:hover,
+.left-arrow:focus,
+.left-arrow:hover {
+  background-image: url(../images/slider-arrow-orange.svg);
+}
 
 .right-arrow {
   transform: rotate(180deg);
@@ -235,6 +241,6 @@
   }
   .slick-active {
     opacity: 1;
-    box-shadow: 2px 2px 20px 2px red;
+    box-shadow: 2px 2px 20px 2px rgba(0, 0, 0, 0.25);
   }
 }
