--- a/src/partials/modal-table.html
+++ b/src/partials/modal-table.html
@@ -44,7 +44,7 @@
           <div class="modal__field">
             <input class="custom-date" type="text" value="Cьогодні" placeholder="Сьогодні"
               onfocus="(this.type = 'date')" id="table-date3" name="table-date3" />
-            <label class="modal__label" for="table-date">На яку дату бронювати?</label>
+            <label class="modal__label" for="table-date3">На яку дату бронювати?</label>
           </div>
         </div>
       </div>
