--- a/src/partials/modal-price.html
+++ b/src/partials/modal-price.html
@@ -11,12 +11,15 @@
     <!-- <p class="modal-price__sub-title">Двомісний люкс</p> -->
 
     <form class="form form__modal-price">
-           <select name="number-cast" id="select-cast" class="modal-price__input modal-price__custom-select">
-                <option value="1500">ДВОМІСНИЙ ЛЮКС</option>
-                <option value="1300">ТРЬОХМІСНИЙ НОМЕР</option>
-                <option value="1000">ДВОМІСНИЙ НОМЕР</option>
-
-              </select>     
+      <select
+        name="number-cast"
+        id="select-cast"
+        class="modal-price__input modal-price__custom-select"
+      >
+        <option value="1500">ДВОМІСНИЙ ЛЮКС</option>
+        <option value="1300">ТРЬОХМІСНИЙ НОМЕР</option>
+        <option value="1000">ДВОМІСНИЙ НОМЕР</option>
+      </select>
 
       <p class="modal-price__text">Категорія номеру</p>
       <div class="container__form-price">
@@ -35,8 +38,6 @@
               value="1"
               required
             />
-
- 
           </div>
 
           <label for="numberCast" class="modal-price__label-input"
